--- a/practice-two/package.json
+++ b/practice-two/package.json
@@ -1,5 +1,10 @@
 {
   "devDependencies": {
     "parcel": "^2.11.0"
+  },
+  "scripts": {
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
