--- a/practice-two/package.json
+++ b/practice-two/package.json
@@ -1,10 +1,12 @@
 {
   "devDependencies": {
-    "parcel": "^2.11.0"
+    "parcel": "^2.11.0",
+    "@parcel/transformer-sass": "^2.0.0"
   },
+  "name": "practice-two",
+  "source": "src/index.html",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "parcel build src/index.html"
   }
 }
