--- a/practice-two/package.json
+++ b/practice-two/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
-    "parcel": "^2.11.0"
+    "parcel": "^2.11.0",
+    "@parcel/transformer-sass": "^2.0.1"
   },
   "name": "practice-two",
   "source": "src/index.html",
