--- a/practice-two/package.json
+++ b/practice-two/package.json
@@ -1,12 +1,14 @@
 {
   "devDependencies": {
-    "parcel": "^2.11.0",
-    "@parcel/transformer-sass": "^2.11.0"
+    "parcel": "^2.11.0"
   },
   "name": "practice-two",
   "source": "src/index.html",
   "scripts": {
     "start": "parcel src/index.html",
     "build": "rm -rf build && rm -rf .parcel-cache && parcel build ./src/*.html --no-cache --no-source-maps --dist-dir dist"
+  },
+  "dependencies": {
+    "@parcel/transformer-sass": "^2.12.0"
   }
 }
