--- a/practice-two/package.json
+++ b/practice-two/package.json
@@ -7,5 +7,8 @@
   "scripts": {
     "start": "parcel src/index.html",
     "build": "rm -rf build && rm -rf .parcel-cache && parcel build ./src/*.html --no-cache --no-source-maps --dist-dir dist"
+  },
+  "dependencies": {
+    "@parcel/transformer-sass": "^2.12.0"
   }
 }
