--- a/practice-two/package.json
+++ b/practice-two/package.json
@@ -2,11 +2,9 @@
   "devDependencies": {
     "parcel": "^2.11.0"
   },
-  "name": "practice-two",
-  "source": "src/index.html",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "rm -rf build && rm -rf .parcel-cache && parcel build ./src/*.html --no-cache --no-source-maps --dist-dir dist"
+    "build": "parcel build ./src/index.html  --dist-dir ./dist"
   },
   "dependencies": {
     "@parcel/transformer-sass": "^2.12.0"
