--- a/practice-two/package.json
+++ b/practice-two/package.json
@@ -7,7 +7,6 @@
     "build": "parcel build ./src/index.html  --dist-dir ./dist"
   },
   "dependencies": {
-    "@parcel/transformer-sass": "^2.12.0",
-    "bootstrap": "^5.3.3"
+    "@parcel/transformer-sass": "^2.12.0"
   }
 }
